page hover effects done

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="Pages/Home/style.css" />
   <link rel="stylesheet" href="Pages/About/MainPage/styles/layout.css" />
   <link rel="stylesheet" href="Pages/Credits/styles/layout.css" />
+  <link rel="stylesheet" href="Pages/Credits/styles/card.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
   <script src="Pages/Fleet/scripts/data.js"></script>
   <script src="Pages/About/knowMorePage/scripts/data.js"></script>
@@ -68,7 +69,14 @@
       <section class="contributors" id="initial">
         <p id="title">Developers</p>
         <div class="scroll-container">
-          <div></div>
+          <div>
+            <img src="Pages/About/knowMorePage/Assets/Senior Core/gaurav.jpeg">
+            <div class="expanding-div">
+              <p>Name</p>
+              <p>Gaurav Singh</p>
+              <p>More</p>
+            </div>
+          </div>
           <div></div>
           <div></div>
           <div></div>
