--- a/index.html
+++ b/index.html
@@ -39,8 +39,12 @@
 </style>
 
 <body>
-  <!-- <script src="app.js" type="module"></script> -->
   <div class="container credits">
+    <div class="content"></div>
+  </div>
+  <script src="Pages/Credits/scripts/components.js"></script>
+  <!-- <script src="app.js" type="module"></script> -->
+  <!-- <div class="container credits">
 
       <div class="credit-more-card">
         <div class="more-card-text">
@@ -154,7 +158,7 @@
           <div class="credits-card"></div>
         </div>
       </section>
-    </div>
+    </div> -->
 
     <script>
       // setTimeout(() => {
