Added sponsors page

--- a/Tests/Sponsors/index.html
+++ b/Tests/Sponsors/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style/style.css"/>
-    <link rel="stylesheet" href="style/sponsors_style.css"/>
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="sponsors_style.css"/>
     <!-- <link rel="stylesheet" href="animate/animate.css" /> -->
 </head>
 <body>
-    <script src="script/data.js"></script>
-    <script src="script/sponsors_page_renderer.js"></script>
-    <script src ="script/animate.js"></script>
-    <script src ="script/sponsors_card.js"></script>
+    <script src="data.js"></script>
+    <script type="module" src="sponsors_page_renderer.js"></script>
+    <!-- <script src ="animate.js"></script> -->
+    <script type="module" src ="sponsors_card.js"></script>
 </body>
 </html>
