gallery page started

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <link rel="stylesheet" href="Pages/Credits/styles/layout.css" />
   <link rel="stylesheet" href="Pages/Credits/styles/card.css" />
   <link rel="stylesheet" href="Pages/Credits/styles/more-card.css" />
+  <link rel="stylesheet" href="Pages/Gallery/styles/layout.css" />
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
   <script src="Pages/Fleet/scripts/data.js"></script>
   <script src="Pages/Credits/scripts/components.js"></script>
@@ -42,7 +44,23 @@
 </style>
 
 <body>
-  <script src="app.js" type="module"></script>
+  <!-- <script src="app.js" type="module"></script> -->
+  <div class="container gallery">
+    <div class="title">
+      <div id="back-text">
+        Explore Team UAV
+      </div>
+      <div id="fore-text">
+         <font>Explore</font>
+         <font>Team UAV</font>
+      </div>
+    </div>
+
+    <div class="nav-featured-all">
+      <p>Featured</p>
+      <p>All photos</p>
+    </div>
+  </div>
 </body>
 
 </html>
