new gallery page started

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 </style>
 
 <body>
-  <!-- <script src="app.js" type="module"></script> -->
-  <div class="container gallery">
+  <script src="app.js" type="module"></script>
+  <!-- <div class="container gallery">
     <div class="title">
       <div id="back-text">
         Explore Team UAV
@@ -56,11 +56,18 @@
       </div>
     </div>
 
-    <div class="nav-featured-all">
-      <p>Featured</p>
-      <p>All photos</p>
+    <div class="image-main-container">
+      <div id="focused-image"></div>
+      <div id="all-images-container">
+        <i class="material-icons" id="toggle-up">expand_less</i>
+          <div class="main-container">
+            
+          </div>
+        <i class="material-icons" id="toggle-down">expand_more</i>
+      </div>
     </div>
-  </div>
+  </div> -->
+  
 </body>
 
 </html>
