--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 </style>
 
 <body>
-  <script src="app.js" type="module"></script>
-  <!-- <div class="container gallery">
+  <!-- <script src="app.js" type="module"></script> -->
+  <div class="container gallery">
     <div class="title">
       <div id="back-text">
         Explore Team UAV
@@ -57,17 +57,55 @@
     </div>
 
     <div class="image-main-container">
-      <div id="focused-image"></div>
+      <div id="focused-image">
+        <img src="https://res.cloudinary.com/demo/image/upload/c_crop,h_200,w_300/sample.jpg">
+
+        <div class="mini-info">
+          <p class="heading">Heading Placeholder</p>
+          <p class="description">Description Placeholder</p>
+        </div>
+      </div>
       <div id="all-images-container">
         <i class="material-icons" id="toggle-up">expand_less</i>
           <div class="main-container">
-            
+              <div class="image-card active">
+                <img src="https://res.cloudinary.com/demo/image/upload/c_crop,h_200,w_300/sample.jpg">
+              </div>
+              <div class="image-card">
+                <img src="https://res.cloudinary.com/demo/image/upload/c_crop,h_200,w_300/sample.jpg">
+              </div>
+              <div class="image-card">
+                <img src="">
+              </div>
+              <div class="image-card">
+                <img src="">
+              </div>
+              <div class="image-card">
+                <img src="">
+              </div>
+              <div class="image-card">
+                <img src="">
+              </div>
           </div>
         <i class="material-icons" id="toggle-down">expand_more</i>
       </div>
     </div>
-  </div> -->
+  </div>
   
+  <script>
+    let img= document.querySelector(".image-card:first-child");
+
+    let img2 = document.querySelector('.image-card:nth-child(2)');
+
+    setTimeout(() => {
+      img.classList.toggle('active');
+      img2.classList.toggle('active');
+    }, 1000);
+
+    let img_nodes = document.querySelectorAll('.image-card');
+    for(let i of img_nodes)
+      i.addEventListener('click', () => console.log('clicked'));
+  </script>
 </body>
 
 </html>
