js components started

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 </style>
 
 <body>
-  <script src="app.js" type="module"></script>
-  <!-- <div class="container gallery">
+  <!-- <script src="app.js" type="module"></script> -->
+  <div class="container gallery">
     <div class="title">
       <div id="back-text">
         Explore Team UAV
@@ -103,9 +103,9 @@
     }, 1000);
 
     let img_nodes = document.querySelectorAll('.image-card');
-    for(let i of img_nodes)
+    for (let i of img_nodes)
       i.addEventListener('click', () => console.log('clicked'));
-  </script> -->
+  </script>
 </body>
 
 </html>
